--- a/index.html
+++ b/index.html
@@ -977,6 +977,12 @@ input[type="date"]:focus {
             overflow: visible !important;
             padding: 20px;
         }
+        .top-header {
+            width: calc(100% + 20px) !important; /* Offset the 20px padding */
+            margin-right: -20px !important;
+            border-radius: var(--radius) 0 0 var(--radius) !important;
+            border-right: none !important;
+        }
         .dashboard-grid {
             display: grid;
         }
@@ -989,6 +995,12 @@ input[type="date"]:focus {
         @media (max-width: 768px) {
             .main-content {
                 padding: 10px;
+            }
+            .top-header {
+                width: 100% !important;
+                margin-right: 0 !important;
+                border-radius: var(--radius) !important;
+                border-right: 1px solid #eeeeee !important;
             }
         }
     </style>
